# smart-vents-hardware

./: README.md  TODO.md  outline.yaml  payload.h  server.cpp  vent.cpp
client/: vent.cpp  vent.h
common/: EspNow.cpp  EspNow.hpp  Mac.hpp
components/Bme/: CMakeLists.txt
components/Bme/include/: Bme.hpp  BmeI2c.hpp
components/Bme/src/: Bme.cpp  BmeI2c.cpp
components/EspNow/: CMakeLists.txt  KConfig
components/EspNow/include/: EspNow.hpp
components/EspNow/src/: EspNow.cpp
components/I2c/: CMakeLists.txt
components/I2c/include/: I2c.hpp
components/I2c/src/: I2c.cpp
components/Pir/: CMakeLists.txt
components/Pir/src/: Pir.cpp
components/Servo/: CMakeLists.txt
components/Servo/include/: Servo.hpp
components/Servo/src/: Servo.cpp
concept/: vent-block-diagram.xml  vent.drawio  vent.xml  wifi-comm.xml
server/: CMakeLists.txt  sdkconfig  sdkconfig.old  server.cpp  server.h
server/core/: CMakeLists.txt  Kconfig.projbuild
server/core/inc/: SVent.hpp  Server.hpp  SxVent.hpp  Temp.hpp  comm.hpp  main.hpp
server/core/src/: Main.cpp  SVent.cpp  Server.cpp  SxVent.cpp  main.cpp
server/data/: index.html  script.js  style.css
smart-vents/server/core/: CMakeLists.txt
smart-vents/server/core/inc/: SVent.hpp  Server.hpp
smart-vents/vent/core/: Kconfig.projbuild
smart-vents/vent/core/inc/: Vent.hpp
smart-vents/vent/core/src/: Main.cpp  Vent.cpp
vent/: CMakeLists.txt  sdkconfig  sdkconfig.old
vent/core/: CMakeLists.txt
vent/core/inc/: Pir.hpp  Servo.hpp  Temp.hpp  Vent.hpp
vent/core/src/: Main.cpp  Pir.cpp  Servo.cpp  Temp.cpp  Vent.cpp
